# crewcd

./: README.md  clinical_history.md  crew.py  main.py
config/: agents.yaml  tasks.yaml
crewdc/: pyvenv.cfg
crewdoc/: README.md  clinical_history.md  pyproject.toml
crewdoc/src/crewdoc/: crew.py  main.py
crewdoc/src/crewdoc/config/: agents.yaml  tasks.yaml
crewdoc/src/crewdoc/tools/: custom_tool.py
tools/: custom_tool.py
